--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "combine-reports": "mochawesome-merge cypress/reports/mocha/*.json > cypress/reports/mochareports/report.json",
     "generate-report": "marge cypress/reports/mochareports/report.json -f report -o cypress/reports/mochareports",
     "posttest": "npm run combine-reports && npm run generate-report",
-    "test" : "npm run scripts || npm run posttest"
+    "test": "npm run scripts || npm run posttest"
   },
   "author": "Erdal Kurucay",
   "license": "ISC",
@@ -23,6 +23,7 @@
     "mochawesome-merge": "^4.2.1"
   },
   "dependencies": {
+    "cypress-downloadfile": "^1.2.2",
     "cypress-multi-reporters": "^1.6.0",
     "mocha": "^10.0.0",
     "mochawesome-report-generator": "^6.2.0"
