--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "devDependencies": {
     "cypress": "^9.6.0",
+    "cypress-file-upload": "^5.0.8",
     "cypress-xpath": "^1.6.2",
     "del": "^6.0.0",
     "mochawesome": "^7.1.3",
