--- a/package.json
+++ b/package.json
@@ -5,13 +5,7 @@
   "main": "index.js",
   "scripts": {
     "cypress:open": "cypress open",
-    "clean:reports": "if exist cypress\\reports rmdir /s/q cypress\\reports && mkdir cypress\\reports && del cypress\\reports\\mochareports",
-    "pretest": "npm run clean:reports",
-    "scripts": "cypress run",
-    "combine-reports": "mochawesome-merge cypress/reports/mocha/*.json > cypress/reports/mochareports/report.json",
-    "generate-report": "marge cypress/reports/mochareports/report.json -f report -o cypress/reports/mochareports",
-    "posttest": "npm run combine-reports && npm run generate-report",
-    "test": "npm run scripts || npm run posttest"
+    "test-jenkins": "JUNIT_REPORT_PATH=/report.xml mocha --colors --reporter mocha-jenkins-reporter"
   },
   "author": "Erdal Kurucay",
   "license": "ISC",
@@ -27,6 +21,7 @@
     "cypress-downloadfile": "^1.2.2",
     "cypress-multi-reporters": "^1.6.0",
     "mocha": "^10.0.0",
+    "mocha-jenkins-reporter": "^0.4.7",
     "mochawesome-report-generator": "^6.2.0"
   }
 }
