--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "cypress:open": "cypress open",
-    "test-jenkins": "JUNIT_REPORT_PATH=/report.xml mocha --colors --reporter mocha-jenkins-reporter"
+    "test-jenkins": "report.xml mocha --colors --reporter mocha-jenkins-reporter"
   },
   "author": "Erdal Kurucay",
   "license": "ISC",
