--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "cypress:open": "cypress open",
-    "test-jenkins": "mocha ./test.js --reporter mocha-junit-reporter --reporter-options ./test-results.xml"
+    "test-jenkins": "npm cypress run --reporter mocha-junit-reporter --reporter-options ./test-results.xml"
   },
   "author": "Erdal Kurucay",
   "license": "ISC",
